# agent-experiment-os

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.frontend  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
docs/: agent-adapters.md  agent-work-context.md  architecture.md  backend-api-contract.md  codex-mcp.md  codex-quickstart.md  experiment-methodology.md  github-about.md  homepage.css  index.html  issue-evidence-model.md  issue-evidence-security.md  knowledge-wiki.md  local-stack.md  mcp-dependency-flow.md  product-dashboard.md  public-matrix-report.md  release-preview-v0.1.0.md  release-preview-v0.1.1.md  research-agenda.md  roadmap.md  security.md  thesis.md  twitter-rd-post.md
frontend/: next.config.mjs  package-lock.json  package.json  playwright.config.ts
frontend/lib/: api.ts
migrations/: env.py
research/: 2026-04-28-codex-mcp-self-test.md  2026-04-28-dogfood-run-c6a64769ad12.md  2026-04-28-experiment-os-vs-evals.md  deep-research.md  experiment-os.md
tests/: conftest.py  test_agent_actions.py  test_briefs.py  test_codex_adapter.py  test_codex_events.py  test_completion.py  test_dashboard.py  test_dependencies.py  test_event_contract.py  test_experiment_lifecycle.py  test_experiment_reports.py  test_experiments.py  test_external_agents.py  test_fixtures.py  test_http_api.py  test_issues.py  test_matrix.py  test_mcp_contract.py  test_metrics.py  test_policy_candidates.py  test_reports.py  test_retrieval.py  test_review.py  test_transcripts.py  test_wiki_health.py
web/: app.js  index.html  styles.css
(+148 files in other folders)
