[project]
name = "experiment-os"
version = "0.1.0"
description = "MCP-native experiment knowledge system for coding agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.6.0",
    "typer>=0.12.5",
]

[project.scripts]
experiment-os = "experiment_os.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

