[project]
name = "experiment-os"
version = "0.1.0"
description = "MCP-native experiment knowledge system for coding agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.124.0",
    "mcp[cli]>=1.27.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.49",
    "typer>=0.12.5",
    "uvicorn>=0.38.0",
]

[project.scripts]
experiment-os = "experiment_os.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
